"""add organizer_profiles table

Revision ID: 47571f6050e2
Revises: bb1666396d4f
Create Date: 2026-09-03 09:44:14.257074

"""
from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision = '47571f6050e2'
down_revision = 'bb1666396d4f'
branch_labels = None
depends_on = None


def upgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('organizer_profiles',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('user_id', sa.Integer(), nullable=False),
    sa.Column('company_name', sa.String(length=255), nullable=False),
    sa.Column('city', sa.String(length=255), nullable=False),
    sa.Column('address', sa.String(length=500), nullable=False),
    sa.Column('industry', sa.String(length=30), nullable=False),
    sa.Column('gst_number', sa.String(length=20), nullable=True),
    sa.Column('pan_number', sa.String(length=20), nullable=False),
    sa.Column('bank_account_holder_name', sa.String(length=255), nullable=False),
    sa.Column('bank_account_number', sa.String(length=34), nullable=False),
    sa.Column('bank_ifsc_code', sa.String(length=11), nullable=False),
    sa.Column('bank_name', sa.String(length=255), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.Column('updated_at', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('user_id')
    )
    # ### end Alembic commands ###


def downgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_table('organizer_profiles')
    # ### end Alembic commands ###
